--- a/JuliaPhiTests1.ipynb
+++ b/JuliaPhiTests1.ipynb
@@ -297,6 +297,79 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e2f2faa4-d6a2-498e-ad4e-6e5b8cbbc0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8×8 Matrix{Float64}:\n",
+       " 1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0\n",
+       " 0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# candidate system ABC fixing D\n",
+    "q2 = q[:,:,:,○,:,:,:,:] # fixing background condition D at t\n",
+    "q3 = q2[:,:,:,:,:,:,○] + q2[:,:,:,:,:,:,●] # marganalizing out state D at t+1\n",
+    "q4 = q3 ./ sum(q3, dims=(4,5,6)) # normailizing rows\n",
+    "reshape(q4, 8, 8) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d45a97d6-c944-4eee-ad0c-0ab0ab738520",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " 0.25\n",
+       " 0.75"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mechanism C over purview BC\n",
+    "\n",
+    "# Feed in a uniform distribution to A's inputs\n",
+    "\n",
+    "q5 = q4[:,:,:,:,○,:] + q4[:,:,:,:,●,:] # marganilize out B at t+1\n",
+    "q6 = q5 ./ sum(q5, dims=(4,5)) # normailizing rows\n",
+    "\n",
+    "q7 = q6[:,:,:,:,○] + q6[:,:,:,:,●] # marganilize out C at t + 1\n",
+    "q8 = q7 ./ sum(q7, dims=(4)) # normailizing rows\n",
+    "\n",
+    "q9 = q8[○,:,:,:] + q8[●,:,:,:] # marganilize out A at t - 1\n",
+    "q10 = q9 ./ sum(q9, dims=(3)) # normailizing rows\n",
+    "\n",
+    "q11 = q10[○,:,:] + q10[●,:,:] # marganilize out B at t - 1\n",
+    "q12 = q11 ./ sum(q11, dims=(2)) # normailizing rows\n",
+    "\n",
+    "q13 = q12[○,:] + q12[●,:] # marganilize out C at t - 1\n",
+    "q14 = q13 ./ sum(q13, dims=(1)) # normailizing rows\n"
+   ]
   }
  ],
  "metadata": {
